devops/kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      labels:
        app: api
    spec:
      containers:
        - name: api
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          image: alex23451234/django-api:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /etc/secrets/certs
              name: certs
            - mountPath: /etc/secrets
              name: password
      volumes:
        - name: certs
          secret:
            secretName: db-postgresql-crt
            items:
              - key: ca.crt
                path: ca.crt
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key

        - name: password
          secret:
            secretName: db-postgresql
            items:
              - key: postgres-password
                path: password

      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
